Tweak apigen.yml and apigen.yml.dist

--- a/config/apigen.yml
+++ b/config/apigen.yml
@@ -1,5 +1,4 @@
 access-levels: public,protected,private
 internal: yes
 php: false
-deprecated: true
-todo: true
+annotation-groups: 'todo,deprecated'
