--- a/composer.json
+++ b/composer.json
@@ -38,8 +38,8 @@
 		"phpdocumentor/phpdocumentor": "~2"
 	},
 	"autoload": {
-		"psr-0": {
-			"ApiGeneratorOrg": "src"
+		"psr-4": {
+			"ApiGeneratorOrg\\": "src"
 		}
 	},
 	"extra": {
