TASK: Update dependencies (including require-dev)
Package operations: 22 installs, 17 updates, 8 removals

  - Uninstalling tracy/tracy (v2.4.6)
  - Uninstalling symfony/options-resolver (v3.2.6)
  - Uninstalling popsul/php-token-reflection (1.5.8)
  - Uninstalling nette/reflection (v2.4.1)
  - Uninstalling nette/caching (v2.5.3)
  - Uninstalling michelf/php-markdown (1.7.0)
  - Uninstalling apigen/theme-default (v1.0.2)
  - Uninstalling apigen/theme-bootstrap (v1.1.3)
  - Updating psr/log (1.0.2) to psr/log (1.1.0)
  - Updating monolog/monolog (1.22.1) to monolog/monolog (1.24.0)
  - Updating symfony/process (v3.2.6) to symfony/process (v3.4.28)
  - Installing symfony/polyfill-ctype (v1.11.0)
  - Updating symfony/filesystem (v3.2.6) to symfony/filesystem (v3.4.28)
  - Updating latte/latte (v2.3.13) to latte/latte (v2.5.1)
  - Updating nette/utils (v2.4.4) to nette/utils (v2.5.3)
  - Updating nette/finder (v2.4.0) to nette/finder (v2.5.0)
  - Installing symfony/event-dispatcher-contracts (v1.1.1)
  - Installing psr/container (1.0.0)
  - Updating symfony/event-dispatcher (v3.2.6) to symfony/event-dispatcher (v4.3.1)
  - Updating symfony/debug (v3.2.6) to symfony/debug (v4.3.1)
  - Updating nette/php-generator (v2.6.0) to nette/php-generator (v3.2.2)
  - Installing nikic/php-parser (v4.2.2)
  - Installing jetbrains/phpstorm-stubs (v2019.1)
  - Installing webmozart/assert (1.4.0)
  - Installing phpdocumentor/reflection-common (1.0.1)
  - Installing phpdocumentor/type-resolver (0.4.0)
  - Installing phpdocumentor/reflection-docblock (4.3.1)
  - Installing roave/signature (1.0.0)
  - Installing roave/better-reflection (dev-master f86b8f9)
  - Installing symfony/finder (v3.4.28)
  - Updating symfony/yaml (v3.2.6) to symfony/yaml (v3.4.28)
  - Updating symfony/polyfill-mbstring (v1.3.0) to symfony/polyfill-mbstring (v1.11.0)
  - Installing symfony/polyfill-php72 (v1.11.0)
  - Installing symfony/polyfill-intl-idn (v1.11.0)
  - Installing symfony/mime (v4.3.1)
  - Installing

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"license": "LGPL-3.0+",
 	"config": {
 		"platform": {
-			"php": "7.1"
+			"php": "7.3"
 		}
 	},
 	"authors": [
@@ -26,8 +26,10 @@
 		"symfony/yaml": "~3.2",
 		"symfony/process": "~3.2",
 		"symfony/filesystem": "~3.2",
-		"apigen/apigen": "dev-master#44a613cf75844fe28b0a9a03347b0310df5c06c4"
+		"apigen/apigen": "dev-master"
 	},
+	"minimum-stability": "dev",
+	"prefer-stable": true,
 	"suggest": {
 		"apigen/apigen": "To generate documentation using apigen",
 		"phpdocumentor/phpdocumentor": "To generate documentation using phpdoc"
